# evaluator-vsa

./: .env.example  .gitignore  main.py  pyproject.toml
settings/: config.py  db.py
src/: datasets.py  estimators.py  utils.py
src/base/: BaseEstimator.py
